--- a/src/View/Plat/_form.html.twig
+++ b/src/View/Plat/_form.html.twig
@@ -1,8 +1,8 @@
 
 <form class="uk-form-horizontal uk-margin-large" method="post">
-	<input type="hidden" value="{{ plat.id }}" name="id">
+    <input type="hidden" value="{{ plat.id }}" name="id">
 
-	<div class="uk-margin">
+    <div class="uk-margin">
         <label class="uk-form-label" for="form-horizontal-select">Catégorie</label>
         <div class="uk-form-controls">
             <select class="uk-select" id="form-horizontal-select" name="category" value="{{plat.category}}">
@@ -11,6 +11,9 @@
                 <option name="category">Vegan</option>
                 <option name="category">Omnivore</option>
             </select>
+            <div class=" uk-flex uk-flex-middle uk-background-cover uk-dark" style="color: #FF1616">
+                {{ errors[2] }}
+            </div>
         </div>
     </div>
 
@@ -18,20 +21,29 @@
         <label class="uk-form-label" for="form-horizontal-text">Nom du plat</label>
         <div class="uk-form-controls">
             <input class="uk-input" id="form-horizontal-text" type="text" placeholder="name" name="name" value="{{plat.name}}">
+            <div class=" uk-flex uk-flex-middle uk-background-cover uk-dark" style="color: #FF1616">
+                {{ errors[1] }}
+            </div>
         </div>
     </div>
 
-	<div class="uk-margin">
+    <div class="uk-margin">
         <label class="uk-form-label" for="form-horizontal-textarea">Description</label>
         <div class="uk-form-controls">
             <textarea class="uk-textarea" id="form-horizontal-textarea" rows="5" type="text" placeholder="description" name="description">{{plat.description}}</textarea>
-    	</div>
+            <div class=" uk-flex uk-flex-middle uk-background-cover uk-dark" style="color: #FF1616">
+                {{ errors[3] }}
+            </div>
+        </div>
     </div>
 
-	<div class="uk-margin">
+    <div class="uk-margin">
         <label class="uk-form-label" for="form-horizontal-text">Prix</label>
         <div class="uk-form-controls">
             <input class="uk-input" id="form-horizontal-text" type="text" placeholder="price" name="price" value="{{plat.price}}">
+            <div class=" uk-flex uk-flex-middle uk-background-cover uk-dark" style="color: #FF1616">
+                {{ errors[4] }}
+            </div>
         </div>
     </div>
 
@@ -39,9 +51,12 @@
         <label class="uk-form-label" for="form-horizontal-text">Image (nom avec extension)</label>
         <div class="uk-form-controls">
             <input class="uk-input" id="form-horizontal-text" type="text" placeholder="image" name="image" value="{{plat.image}}">
+            <div class=" uk-flex uk-flex-middle uk-background-cover uk-dark" style="color: #FF1616">
+                {{ errors[5] }}
+            </div>
         </div>
     </div>
 
-<input class="uk-button uk-button-default uk-align-center" type="submit" value="Valider">
+    <input class="uk-button uk-button-default uk-align-center" type="submit" value="Valider">
 
 </form>
