--- a/src/View/User/_form.html.twig
+++ b/src/View/User/_form.html.twig
@@ -19,7 +19,7 @@
 	<div class="uk-margin">
         <label class="uk-form-label" for="form-horizontal-text">Mot de Passe :</label>
         <div class="uk-form-controls">
-            <input class="uk-input" id="form-horizontal-text" type="text" placeholder="pass" name="pass" value="{{user.pass}}">
+            <input class="uk-input" id="form-horizontal-text" type="text" placeholder="champs obligatoire" name="pass" >
         </div>
     </div>
 
