--- a/src/View/Contact/contact.html.twig
+++ b/src/View/Contact/contact.html.twig
@@ -26,15 +26,11 @@
             </select>
         </div>
         <div class="uk-margin">
-            <input required class="uk-input" type="text" placeholder="Autre prestation ?" name="prestation" >
-        </div>
-        <div class="uk-margin">
             <label>Durée de la prestation  </label>
             <select required class="uk-select" id ="select1" name="select1">
-                <option name="weekend">Un weekend</option>
-                <option name="week">Une semaine</option>
-                <option name="semaines2">Deux semaines</option>
-                <option name="semaines3">Trois semaines</option>
+                <option name="soiree">Soirée</option>
+                <option name="soiree2">Après-midi et soirée</option>
+                <option name="weekend">Tout un weekend</option>
             </select>
         </div>
         <div class="uk-margin">
