--- a/src/View/User/show.html.twig
+++ b/src/View/User/show.html.twig
@@ -20,20 +20,13 @@
                     </div>
                 </div>
             </header>
-
             <p uk-margin>
-            <a class="uk-button uk-button-default" href="/User/edit/{{ userData.id }}">Editer le compte</a>
-            <form action="/User/delete/{{userData.id}}" method="POST"><button class="uk-button uk-button-danger" href="/User/Connexion">Supprimer le compte</button>     </form>
+            <a class="uk-button uk-button-default"  href="/User/edit/{{ userData.id }}" >Editer le compte</a>
 
-
-
-
-
+            <form onsubmit="return confirm('Attention : la supression du compte entraine une suppresion de toutes les données liées à la session');" class="c-inline" action="/User/delete/{{userData.id}}" method="post">
+                <button class="uk-button uk-button-danger" href="/User/Connexion">Supprimer le compte</button>
+            </form>
             </p>
-
-            <div class="uk-comment-body">
-                <p>Attention : la supression du compte entraine une suppresion de toutes les données liées à la session.</p>
-            </div>
         </article>
        </li>
        </ul>
