add insta button

--- a/src/View/layout/footer.html.twig
+++ b/src/View/layout/footer.html.twig
@@ -28,7 +28,7 @@
         <h3 class="uk-padding-small uk-padding-remove-bottom">Réseaux :</h3>
         <ul class="uk-list uk-list-large">
             <li><a href="" alt="Facebook_account"><img src="/assets/images/facebook_footer.png" ></a></li>
-            <li><a href="" alt="Instagram_account"><img src="/assets/images/insta_footer.png" ></a></li>
+            <li><a href="https://www.instagram.com/strascookwcs/" alt="Instagram_account"><img src="/assets/images/insta_footer.png" ></a></li>
             <li><a href="" alt="Linkedin_account"><img src="/assets/images/linkedin_footer.png" ></a></li>
         </ul>
     </div>
