--- a/src/View/User/show.html.twig
+++ b/src/View/User/show.html.twig
@@ -23,7 +23,7 @@
 
             <p uk-margin>
             <a class="uk-button uk-button-default" href="/User/edit/{{ userData.id }}">Editer le compte</a>
-                <a class="uk-button uk-button-default" href="/Panier/show/{{ userData.id }}">Vos reservations</a>
+                <a class="uk-button uk-button-default" href="/User/showReservation/{{ userData.id }}">Mes reservations</a>
 
             <form action="/User/delete/{{userData.id}}" method="POST"><button class="uk-button uk-button-danger" href="/User/Connexion">Supprimer le compte</button>     </form>
 
