--- a/src/View/Entree/carte_entree.html.twig
+++ b/src/View/Entree/carte_entree.html.twig
@@ -25,9 +25,11 @@
 
         </div>
         </div>
+
         {% for entree in entrees %}
         {% if (loop.index %2) != 0 %} 
-<div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin-medium uk-margin-xlarge-left uk-margin-xlarge-right" uk-grid>
+        <div uk-scrollspy="target: > div; cls: uk-animation-fade; delay: 300">
+<div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin-medium uk-margin-xlarge-left uk-margin-xlarge-right"  uk-grid>
         <div class="uk-card-media-left uk-cover-container">
             <img src="/assets/images/{{entree.image}}.jpg" alt="" uk-cover>
             <canvas width="600" height="400"></canvas>
@@ -42,7 +44,9 @@
         </div>
     </div>
     </div>
+        </div>
     {% else %}
+    <div uk-scrollspy="target: > div; cls: uk-animation-fade; delay: 300">
 <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin-medium uk-margin-xlarge-left uk-margin-xlarge-right" uk-grid>
     <div class="uk-flex-last@s uk-card-media-right uk-cover-container">
         <img src="/assets/images/{{entree.image}}.jpg" alt="" uk-cover>
@@ -58,6 +62,7 @@
         </div>
     </div>
     </div>
+        </div>
 {% endif %}
         {% else %}
             <li>Nothing to display</li>
