--- a/src/View/Plat/index.html.twig
+++ b/src/View/Plat/index.html.twig
@@ -29,7 +29,7 @@
 
         {% for plat in plats %}
             {% if (loop.index %2) != 0 %}
-              
+        <div uk-scrollspy="target: > div; cls: uk-animation-fade; delay: 300">
               <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin-medium uk-margin-xlarge-left uk-margin-xlarge-right" uk-grid>
     <div class="uk-card-media-left uk-cover-container">
         <img src="/assets/images/{{plat.image}}" alt="" uk-cover>
@@ -42,8 +42,10 @@
             <p>{{ plat.price }}</p>
         </div>
     </div>
+    </div>
 </div>
 {% else %}
+        <div uk-scrollspy="target: > div; cls: uk-animation-fade; delay: 300">
 <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin-medium uk-margin-xlarge-left uk-margin-xlarge-right" uk-grid>
     <div class="uk-flex-last@s uk-card-media-right uk-cover-container">
         <img src="/assets/images/{{plat.image}}" alt="" uk-cover>
@@ -55,6 +57,7 @@
             <p>{{ plat.description }}</p>
             <p>{{ plat.price }}</p>
         </div>
+    </div>
     </div>
 </div>
         {% endif %}
