--- a/src/View/layout/navBar.html.twig
+++ b/src/View/layout/navBar.html.twig
@@ -9,6 +9,7 @@
                     <a class="uk-text-emphasis" href="Jour/index">Carte</a>
                     <div class="uk-navbar-dropdown">
                         <ul class="uk-nav uk-dropdown-nav">
+                            <li class="uk-nav-header"><a href="/Jour/index">Plat du jour</a></li>
                             <li class="uk-nav-header"><a href="/Entree/index">Entrées</a></li>
                             <li class="uk-nav-divider"></li>
                             <li><a href="/Entree/indexCat/Omnivore">Omnivores</a></li>
@@ -56,13 +57,13 @@
                     <ul class="uk-nav uk-nav-primary uk-nav-center">
                         <li class="uk-active"><a href="../global/index.php">Accueil</a></li>
                         <li class="uk-nav-header"><a href="">MENUS</a></li>
-                        <li><a href=""><span class="uk-margin-small-right" ></span>Plat du jour</a></li> 
-                        <li><a href=""><span class="uk-margin-small-right" ></span>Entrées</a></li>
-                        <li><a href=""><span class="uk-margin-small-right" ></span>Plats</a></li>
-                        <li><a href=""><span class="uk-margin-small-right" ></span>Desserts</a></li>
-                        <li><a href=""><span class="uk-margin-small-right" ></span>Boissons</a></li>
-                        <li class="uk-nav-header"><a href="cvFranky.php">Réservation</a></li>
-                        <li><a href=""><span class="uk-margin-small-right" ></span>Inscription/connexion</a></li>
+                        <li><a href="/Jour/index"><span class="uk-margin-small-right" ></span>Plat du jour</a></li> 
+                        <li><a href="/Entree/index"><span class="uk-margin-small-right" ></span>Entrées</a></li>
+                        <li><a href="/Plat/index"><span class="uk-margin-small-right" ></span>Plats</a></li>
+                        <li><a href="/Dessert/index"><span class="uk-margin-small-right" ></span>Desserts</a></li>
+                        <li><a href="/Boissons/index"><span class="uk-margin-small-right" ></span>Boissons</a></li>
+                        <li class="uk-nav-header"><a href="/Panier/add/">Réservation</a></li>
+                        <li><a href="/User/connexion/"><span class="uk-margin-small-right" ></span>Inscription/connexion</a></li>
                         <li><a href=""><span class="uk-margin-small-right" ></span>Contact</a></li>
                         </li>
                     </ul>
