--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -11,16 +11,20 @@
     <div class="uk-card uk-card-default uk-card-body  uk-margin-medium uk-align-center uk-margin-xlarge-left uk-margin-xlarge-right">
         <div class="uk-panel">
             <img class="uk-align-left uk-margin-remove-adjacent" src="/assets/images/chef_index.jpg" width="600" height="525" alt="Example image">
-            <h3>A propos</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <h3>À propos du service de chef à domicile</h3>
+            <p>Le service d’un chef à domicile permet d’organiser un repas chez soi,
+            sans aucune contrainte organisationnelle. Il laisse ainsi pleinement profiter de la compagnie de ses invités,
+            que le repas se déroule en famille, entre amis ou avec des relations professionnelles. Un chef privé s’occupe de tout :
+            achat des ingrédients, préparation du repas sur place, service à l’assiette puis rangement de la cuisine avant de s’éclipser.
+            Recevoir chez soi n’a jamais été aussi simple, plaisant et gourmand.</p>
+            
         </div>
     </div>
 
 
 <div class="uk-card uk-card-default uk-card-body uk-align-center uk-margin-xlarge-left uk-margin-xlarge-right">
     <h3 class="uk-card-title uk-text-center">Menu</h3>
-    <p>Lorem ipsum  sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    <p>Découvrez les plats que nos cuisiniers viennent préparer chez vous.</p>
     <div class="uk-button-group uk-flex uk-flex-center">
         <form action="/Jour/index/" methode="post">
         <button class="uk-button uk-button-default">Carte</button>
@@ -58,7 +62,7 @@
         <div>
             <div class="uk-card-body ">
                 <h3 class="uk-card-title ">Les entrées</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+                <p>Découvrez nos entrées regrouppées par conviction culinaire, chacun trouvera son compte!</p>
                 <div class="uk-button-group uk-flex uk-flex-center ">
                     <form action="/Entree/index/" method="post">
                     <button class="uk-button uk-button-default uk-flex uk-flex-center" >Entrées</button>
@@ -76,7 +80,7 @@
         <div>
             <div class="uk-card-body ">
                 <h3 class="uk-card-title ">Les plats</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+                <p>Découvrez nos plats regrouppés par conviction culinaire, chacun trouvera son compte!</p>
                 <div class="uk-button-group uk-flex uk-flex-center ">
                     <form action="/Plat/index/" method="post">
                     <button class="uk-button uk-button-default uk-flex uk-flex-center">Plats</button>
@@ -94,7 +98,7 @@
         <div>
             <div class="uk-card-body ">
                 <h3 class="uk-card-title ">Les desserts</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+                <p>Découvrez nos desserts regrouppés par conviction culinaire, chacun trouvera son compte!</p>
                 <div class="uk-button-group uk-flex uk-flex-center ">
                     <form action="/Dessert/index/" method="post">
                     <button class="uk-button uk-button-default uk-flex uk-flex-center">Desserts</button>
@@ -112,7 +116,7 @@
         <div>
             <div class="uk-card-body ">
                 <h3 class="uk-card-title ">Les boissons</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+                <p>Découvrez nos boissons, toutes faites maison!</p>
                 <div class="uk-button-group uk-flex uk-flex-center ">
                     <form action="/Boissons/index/" method="post">
                     <button class="uk-button uk-button-default uk-flex uk-flex-center">Boissons</button>
