--- a/src/View/layout/navBar.html.twig
+++ b/src/View/layout/navBar.html.twig
@@ -1,7 +1,7 @@
 <div uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky" class="uk-visible@m">
     <nav class="uk-navbar-container uk-margin " uk-navbar="mode: click" style="background-color:#FF1616;" >
         <a class="uk-navbar-item uk-logo uk-margin-medium-left" href="/"><img src="/assets/images/logo_anime.gif"></a>
-        <div class="uk-navbar-item uk-logo uk-margin-medium-left uk-visible@xl" ><img src="/assets/images/final_logo.svg"></div>
+        <div class="uk-navbar-item uk-logo uk-margin-small-left uk-visible@xl" ><img src="/assets/images/final_logo.svg"></div>
         <div class="uk-navbar-center">
             <ul class="uk-navbar-nav">
                 <li class="uk-active" ><a href="/">Accueil</a></li>
