--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -24,7 +24,7 @@
 
 <div class="uk-card uk-card-default uk-card-body uk-align-center uk-margin-xlarge-left uk-margin-xlarge-right">
     <h3 class="uk-card-title uk-text-center">Menu</h3>
-    <p>Découvrez les plats que nos cuisiniers viennent préparer chez vous.</p>
+    <p class ="uk-text-center">Découvrez les plats que nos cuisiniers viennent préparer chez vous.</p>
     <div class="uk-button-group uk-flex uk-flex-center">
         <form action="/Jour/index/" methode="post">
         <button class="uk-button uk-button-default">Carte</button>
