--- a/src/View/Boissons/boissons.index.html.twig
+++ b/src/View/Boissons/boissons.index.html.twig
@@ -16,6 +16,7 @@
         {% for boisson in boissons %}
 
         {% if (loop.index %2) != 0 %}
+        <div uk-scrollspy="target: > div; cls: uk-animation-fade; delay: 300">
             <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin-medium uk-margin-xlarge-left uk-margin-xlarge-right" uk-grid>
                 <div class="uk-card-media-left uk-cover-container">
                     <img src="/assets/images/{{boisson.image}}" alt="" uk-cover>
@@ -29,7 +30,9 @@
                     </div>
                 </div>
             </div>
+            </div>
         {% else %}
+        <div uk-scrollspy="target: > div; cls: uk-animation-fade; delay: 300">
             <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin-medium uk-margin-xlarge-left uk-margin-xlarge-right" uk-grid>
                 <div class="uk-flex-last@s uk-card-media-right uk-cover-container">
                     <img src="/assets/images/{{boisson.image}}" alt="" uk-cover>
@@ -42,6 +45,7 @@
                         <p>{{ boisson.price }}</p>
                     </div>
                 </div>
+            </div>
             </div>
         {% endif %}
 
