title on all page

--- a/src/View/Admin/index.html.twig
+++ b/src/View/Admin/index.html.twig
@@ -1,4 +1,5 @@
 {% extends 'layout.html.twig' %}
+{% block title %}Admin {{parent()}}{% endblock %}
 
 {% block content %}
     <h1 class="uk-text-center">Ajouter, modifer, supprimer la carte comme bon vous semble</h1>
