--- a/src/View/Reservation/show.html.twig
+++ b/src/View/Reservation/show.html.twig
@@ -1,4 +1,5 @@
 {% extends 'layout.html.twig' %}
+{% block title %}Commande {{parent()}}{% endblock %}
 
 {% block content %}
     <h1 class="uk-text-center">Ta commande a été validée</h1>
