--- a/src/View/User/show.html.twig
+++ b/src/View/User/show.html.twig
@@ -31,12 +31,13 @@
                         <h2 class="uk-modal-title">Confirmation</h2>
                     </div>
                     <div class="uk-modal-body">
-                        <p>Attention la supression du compte est irréversible.</p>
+                        <p>️Attention la supression du compte est irréversible️</p>
                     </div>
                     <div class="uk-modal-footer uk-text-right">
-                        <button class="uk-button uk-button-default uk-modal-close" type="button">Annuler</button>
                         <form class="c-inline" action="/User/delete/{{userData.id}}" method="post">
-                            <button class="uk-button uk-button-default" href="/User/Connexion">Supprimer le compte</button>
+                            <br>
+                            <button class="uk-button uk-button-default uk-modal-close" type="button">Annuler</button>
+                            <button class="uk-button uk-button-primary" href="/User/Connexion">Supprimer le compte️</button>
                         </form>
                     </div>
                 </div>
