uniform index plat dessert entree boisson

--- a/src/View/Boissons/boissons.index.html.twig
+++ b/src/View/Boissons/boissons.index.html.twig
@@ -26,7 +26,7 @@
                     <div class="uk-card-body">
                         <h3 class="uk-card-title">{{ boisson.name }}</h3>
                         <p>{{ boisson.description }}</p>
-                        <p>{{ boisson.price }}</p>
+                        <p>{{ boisson.price }} €</p>
                     </div>
                 </div>
             </div>
@@ -42,7 +42,7 @@
                     <div class="uk-card-body">
                         <h3 class="uk-card-title">{{ boisson.name }}</h3>
                         <p>{{ boisson.description }}</p>
-                        <p>{{ boisson.price }}</p>
+                        <p>{{ boisson.price }} €</p>
                     </div>
                 </div>
             </div>
