--- a/src/View/Dessert/dessert.html.twig
+++ b/src/View/Dessert/dessert.html.twig
@@ -38,7 +38,7 @@
                 <h3 class="uk-card-title ">{{ dessert.name }}</h3>
                 <p>{{ dessert.category }}</p>
                 <p>{{ dessert.description }}</p>
-                <p>{{ dessert.price }}$</p>
+                <p>{{ dessert.price }} €</p>
                 <div class="uk-button-group uk-flex uk-flex-center ">
                     <!--<button class="uk-button uk-button-default uk-flex uk-flex-center">Entrées</button>-->
                 </div>
@@ -58,7 +58,7 @@
                 <h3 class="uk-card-title ">{{ dessert.name }}</h3>
                 <p>{{ dessert.category }}</p>
                 <p>{{ dessert.description }}</p>
-                <p>{{ dessert.price }}$</p>
+                <p>{{ dessert.price }} €</p>
                 </div>
             </div>
         </div>
