--- a/src/View/Plat/index.html.twig
+++ b/src/View/Plat/index.html.twig
@@ -38,8 +38,9 @@
     <div>
         <div class="uk-card-body">
             <h3 class="uk-card-title">{{ plat.name }}</h3>
+            <p>{{ plat.category }}</p>
             <p>{{ plat.description }}</p>
-            <p>{{ plat.price }}</p>
+            <p>{{ plat.price }} €</p>
         </div>
     </div>
     </div>
@@ -54,8 +55,9 @@
     <div>
         <div class="uk-card-body">
             <h3 class="uk-card-title">{{ plat.name }}</h3>
+            <p>{{ plat.category }}</p>
             <p>{{ plat.description }}</p>
-            <p>{{ plat.price }}</p>
+            <p>{{ plat.price }} €</p>
         </div>
     </div>
     </div>
