--- a/src/View/Entree/carte_entree.html.twig
+++ b/src/View/Entree/carte_entree.html.twig
@@ -37,9 +37,9 @@
         <div>
             <div class="uk-card-body ">
                 <h3 class="uk-card-title ">{{ entree.name }}</h3>
-                <p>{{entree.description}}</p>
-                <form action="/Entree/delete/{{entree.id}}" method="POST">
-                </form>
+                <p>{{ entree.category }}</p>
+                <p>{{ entree.description }}</p>
+                <p>{{ entree.price }} €</p>
             </div>
         </div>
     </div>
@@ -55,9 +55,9 @@
     <div>
             <div class="uk-card-body ">
                 <h3 class="uk-card-title ">{{ entree.name }}</h3>
-                <p>{{entree.description}}</p>
-                <form action="/Entree/delete/{{entree.id}}" method="POST">
-                </form>
+                <p>{{ entree.category }}</p>
+                <p>{{ entree.description }}</p>
+                <p>{{ entree.price }} €</p>
             </div>
         </div>
     </div>
