--- a/src/View/User/showReservation.html.twig
+++ b/src/View/User/showReservation.html.twig
@@ -2,15 +2,15 @@
 
 {% block content %}
     <h1 class="uk-text-center">Les reservations</h1>
+    {% for reservation in reservation %}
     <div class="uk-card uk-card-default uk-card-body uk-width-1-2@m uk-align-center">
         <h3 class="uk-card-title">Récépissé</h3>
-        {% if pdj is defined %}
+        {% if reservation['plat_du_jour'] == 1 %}
             <h3>Plat du Jour : 12€</h3>
-        {% endif %}
         {% for pj in pdj %}
             <p>{{ pj.name }}</p>
         {% endfor %}
-        {% for reservation in reservation %}
+        {% endif %}
         {% if reservation['entreeName'] is not null %}
             <h3>Entrée :</h3>
             <p>{{reservation['entreeName']}} | {{reservation['entreePrice']}}€</p>
@@ -37,7 +37,7 @@
         {% endif %}
         <hr class="uk-divider-icon">
         <h3>Total :</h3><p>{{reservation['boissonPrice']+ reservationr['dessertPrice'] + reservation['entreePrice'] + reservation['platPrice'] + reservation['pdjPrice'] + user.supplement}}€</p>
-        {% endfor %}
     </div>
+        {% endfor %}
     <a class="uk-button uk-button-default" href="/User/show/{{user.userId}}">Retour</a>
 {% endblock %}
