--- a/src/View/User/show.html.twig
+++ b/src/View/User/show.html.twig
@@ -30,7 +30,7 @@
                     <div class="uk-modal-header">
                         <h2 class="uk-modal-title">Confirmation</h2>
                     </div>
-                    <div class="uk-modal-body">
+                    <div class="uk-modal-body .uk-flex-center">
                         <p>️Attention la supression du compte est irréversible️</p>
                     </div>
                     <div class="uk-modal-footer uk-text-right">
