--- a/src/View/Reservation/show.html.twig
+++ b/src/View/Reservation/show.html.twig
@@ -5,7 +5,7 @@
     <h1 class="uk-text-center">Ta commande a été validée</h1>
     <div class="uk-card uk-card-default uk-card-body uk-width-1-2@m uk-align-center">
         <h3 class="uk-card-title">Récépissé</h3>
-        {% if pdj is defined %}
+        {% if pdj != '' %}
         <h3>Plat du Jour : 12€</h3>
         {% endif %}
         {% for pj in pdj %}
