--- a/src/View/PlatDuJour/carte_platDuJour.html.twig
+++ b/src/View/PlatDuJour/carte_platDuJour.html.twig
@@ -55,10 +55,10 @@
         <div class="uk-navbar-center">
 
             <ul class="uk-navbar-nav">
-                <li class="uk-margin-large-right uk-margin-small-top"><a href="#"><h3>Entrées</h3></a></li>
-                <li class="uk-margin-large-right uk-margin-small-top"><a href="#"><h3>Plats</h3></a></li>
-                <li class="uk-margin-large-right uk-margin-small-top"><a href="#"><h3>Desserts</h3></a></li>
-                <li class="uk-margin-large-right uk-margin-small-top"><a href="#"><h3>Boissons</h3></a></li>
+                <li class="uk-margin-large-right uk-margin-small-top"><a href="/Entree/index/"><h3>Entrées</h3></a></li>
+                <li class="uk-margin-large-right uk-margin-small-top"><a href="/Plat/index"><h3>Plats</h3></a></li>
+                <li class="uk-margin-large-right uk-margin-small-top"><a href="/Dessert/index"><h3>Desserts</h3></a></li>
+                <li class="uk-margin-large-right uk-margin-small-top"><a href="/Boissons/index"><h3>Boissons</h3></a></li>
             </ul>
 
         </div>
